<resources>
    <string name="app_name">Enerfi.v2</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_user">Login User</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="userMail">Email</string>
    <string name="password">Password</string>
    <string name="register_new_user">Register New User</string>
    <string name="register">Register</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="dash">-</string>

    <string name="user">Name</string>
    <string name="name">Name</string>
    <string name="ssid">SSID</string>
    <string name="ssid_name">Network Name</string>
    <string name="success">Success</string>
    <string name="fail">Fail</string>
    <string name="go_home">Go Home</string>
    <string name="loading">Cargando</string>


    <string name="selected_item">Selected item:</string>
    <string name="userName">Full Name</string>
    <string name="unknown">Unknown</string>
    <string name="deviceName">Device Name</string>
    <string name="network_credentials">Network Credentials</string>
    <string name="save_credentials">SAVE CREDENTIALS</string>
    <string name="mac_address">MAC address:</string>
</resources>