<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.mainFragments.deviceregister.DeviceRegisterFragment">

    <Button
        android:id="@+id/btn_scan_networks"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="SCAN"/>

    <TextView
        android:id="@+id/tv_scan_networks_fail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fail"
        android:visibility="gone"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/tv_scann_success"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/success"
        android:visibility="gone"
        android:textSize="24sp" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ssid_name"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/edtUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/ssid"
            android:text="GFM_PA"
            android:inputType="textPersonName|text"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="@+id/textView4"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />


        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="@+id/edtUser"
            app:layout_constraintTop_toBottomOf="@+id/edtUser" />

        <EditText
            android:id="@+id/edtPasswd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/password"
            android:text="DC4DFD12D8"
            android:inputType="textPassword"
            app:layout_constraintStart_toStartOf="@+id/textView3"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/btn_save_credentials"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="SAVE CREDENTIALS"/>

    <TextView
        android:id="@+id/tv_save_credentials_success"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:text="@string/success"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/tv_mac_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/tv_save_credentials_fail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:text="@string/fail"
        android:textSize="24sp" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>